syntax = "proto3";
package cosmos.authz.v1beta1;

import "cosmos_proto/cosmos.proto";

option go_package = "cosmossdk.io/x/authz";

// EventGrant is emitted on Msg/Grant
message EventGrant {
  option (cosmos_proto.message_added_in) = "cosmos-sdk 0.43";
  // Msg type URL for which an authorization is granted
  string msg_type_url = 2;
  // Granter account address
  string granter = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Grantee account address
  string grantee = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventRevoke is emitted on Msg/Revoke
message EventRevoke {
  option (cosmos_proto.message_added_in) = "cosmos-sdk 0.43";
  // Msg type URL for which an authorization is revoked
  string msg_type_url = 2;
  // Granter account address
  string granter = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Grantee account address
  string grantee = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventRevokeAll is emitted on Msg/RevokeAll
message EventRevokeAll {
  option (cosmos_proto.message_added_in) = "cosmos-sdk 0.51";
  // Msg type URL for which all authorizations are revoked
  string msg_type_url = 2;
  // Granter account address
  string granter = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventPruneExpiredGrants is emitted on Msg/PruneExpiredGrants
message EventPruneExpiredGrants {
  option (cosmos_proto.message_added_in) = "x/authz 1.0.0";
  // Address of the pruner
  string pruner = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
